--- a/index.html
+++ b/index.html
@@ -1,47 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Page Title</title>
+  <title>Rock Paper Scissors</title>
   <meta charset="UTF-8"/>
+  <link rel="stylesheet" href="styles.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+    rel="stylesheet"
+  />
 </head>
 <body>
-  <script>
-    function computerPlay () {
-        const playerInput = prompt("Rock, Paper or Scissors?");
-        const playerSelection = playerInput.toLowerCase();
-        const myArray = ["rock", "paper", "scissors"];
-        const computerSelection = myArray[Math.floor(Math.random()*myArray.length)];
-        if ((playerSelection == "rock") && (computerSelection == "rock")) {
-            return ("Tie");
-        }
-        else if ((playerSelection == "paper") && (computerSelection == "paper")) {
-            return ("Tie");
-        }
-        else if ((playerSelection == "scissors") && (computerSelection == "scissors")) {
-            return ("Tie");
-        }
-        else if ((playerSelection == "scissors") && (computerSelection == "paper")) {
-            return ("Win");
-        }
-        else if ((playerSelection == "paper") && (computerSelection == "rock")) {
-            return ("Win");
-        }
-        else if ((playerSelection == "rock") && (computerSelection == "scissors")) {
-            return ("Win");
-        }
-        else if ((playerSelection == "scissors") && (computerSelection == "rock")) {
-            return ("Lose");
-        }
-        else if ((playerSelection == "rock") && (computerSelection == "paper")) {
-            return ("Lose");
-        }
-        else if ((playerSelection == "paper") && (computerSelection == "scissors")) {
-            return ("Lose");
-        }
-        else {
-            return("Error");
-        }
-    } 
-  </script>
+  <header>
+    <h1 class="title">Rock Paper Scissors</h1>
+  </header>
+  <div id="container">
+    <div class="scoreboard">
+      <h2 id="score-heading">Score</h2>
+      <div class="score">
+        <p id="player-score">You: 0</p>
+        <p id="computer-score">Computer: 0</p>
+      </div>
+    </div>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
