--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
       <div class="score">
         <p id="player-score">You: 0</p>
         <p id="computer-score">Computer: 0</p>
+    </div>
+    </div>
+    <div class="selections">
+      <h3 id="selection-heading">Selection</h3>
+      <div class="opponents">
+        <p id="player-selection">Player's selection: </p>
+        <p id="computer-selection">Computer's selection: </p>
       </div>
     </div>
     <button id="rock">Rock</button>
