--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8"/>
   <link rel="stylesheet" href="styles.css" />
   <link
-    href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+    href="https://fonts.googleapis.com/css?family=Bangers"
     rel="stylesheet"
   />
 </head>
